💄 Fix mobile layout break with long links

--- a/src/components/link/link.module.css
+++ b/src/components/link/link.module.css
@@ -3,6 +3,7 @@
   padding: 6px;
 
   text-decoration: none;
+  overflow-wrap: anywhere;
 }
 
 .linkSingle {
